# dspy-template-openapi-compute-modules-function

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  Dockerfile  LICENSE  README.md  inference_demo.py  openapi.foundry.json  opencode.jsonc  ozempic_classifier_optimized.json  pyproject.toml  serve.sh  temp_results.txt
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  publish-foundry.yml  publish-platform-images.yml  railway-preview-smoke.yml  railway-production-smoke.yml  release-version.yml
.zed/: settings.json
artifacts/: ozempic_classifier_ae-category_optimized.json  ozempic_classifier_ae-pc_optimized.json  ozempic_classifier_optimized.json  ozempic_classifier_pc-category_optimized.json
cloudflare/: README.md  test-api.ts
cloudflare/workers/ozempic_classifier_optimized/: index.js  wrangler.toml
data/: test.json  train.json
data/ae-category-classification/: test.json  train.json
data/ae-pc-classification/: test.json  train.json
data/pc-category-classification/: test.json  train.json
docs/: ARTIFACT_AUTO_UPDATE.md  STANDARDS.md  deploy-ci.md  foundry-auto-deploy.md  foundry-openapi-runbook.md
scripts/: demo_artifact_auto_update.py  generate_cloudflare_workers_from_dspy_artifacts.py  generate_sample_data_ozempic_pc_vs_ae.py
scripts/datagen/: adverse_event_sample_data.py  ae_pc_classification_sample_data.py  complaint_category_sample_data.py
scripts/deploy/: foundry_openapi.py  generate_cloudflare_workers_from_dspy_artifacts.py
src/: __init__.py
src/api/: __init__.py  app.py
src/common/: __init__.py  callbacks.py  classifier.py  config.py  data_utils.py  logging.py  paths.py  types.py
src/pipeline/: __init__.py  main.py
src/serving/: __init__.py  service.py
tests/: test_artifact_metadata_update.py  test_integration.py
